# GeneralizedNotationNotation

./: .coverage  .coveragerc  .cursorrules  .gitignore  .pre-commit-config.yaml  =0.27.0  AGENTS.md  AGENTS_TEMPLATE.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_AGENTS_IMPLEMENTATION.md  COMPREHENSIVE_ASSESSMENT_AND_IMPROVEMENTS.md  COMPREHENSIVE_IMPROVEMENTS_FINAL_REPORT.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  COMPREHENSIVE_PIPELINE_ASSESSMENT.md  COMPREHENSIVE_PIPELINE_IMPROVEMENTS_FINAL.md  COMPREHENSIVE_PIPELINE_SUMMARY_FINAL.md  CONTRIBUTING.md  COVERAGE_REORGANIZATION_SUMMARY.md  DEPENDENCY_SETUP_GUIDE.md  DOCS.md  DOCUMENTATION_ASSESSMENT.md  DOCUMENTATION_ASSESSMENT_SUMMARY.md  DOCUMENTATION_REVIEW_SUMMARY.md  DOCUMENTATION_VALIDATION_REPORT.md  Dockerfile  EXECUTION_STATUS_REPORT.md  FINAL_IMPROVEMENTS_SUMMARY.md  GNN  examples ~ Step-by-Step.csv  GNN Punctuation.csv  GNN source file structure.csv  HIERARCHICAL_UPDATE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_QUICK_REFERENCE.md  LICENSE.md  MODULE_DOCUMENTATION.md  (+70 more)
.agent_rules/: AGENTS.md  README.md  SPEC.md  architecture.md  dependencies.md  error_handling.md  gnn_standards.md  mcp.md  module_patterns.md  performance.md  quality.md  render_frameworks.md  testing.md  troubleshooting.md
.aii/: config.yaml
.benchmarks/: AGENTS.md  README.md  SPEC.md
.cursor_rules/: AGENTS.md  INDEX.md  README.md  code_quality.md  error_handling.md  gnn_standards.md  implementation_patterns.md  mcp_integration.md  module_patterns.md  optional_dependencies.md  performance_optimization.md  pipeline_architecture.md  quality_and_dev.md  render_frameworks.md  testing_framework.md  troubleshooting.md
.desloppify/: config.json  query.json  review_packet_blind.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: AGENTS.md  README.md  SPEC.md  dependabot.yml
bandit-results/: bandit-results.sarif
doc/: AGENTS.md  CHANGELOG.md  COMPREHENSIVE_DOCUMENTATION_ASSESSMENT.md  COMPREHENSIVE_PIPELINE_ENHANCEMENT_SUMMARY.md  CROSS_REFERENCE_INDEX.md  DOCS_TO_IMPROVE.md  DOCUMENTATION_MAINTENANCE_PLAN.md  DOCUMENTATION_STATUS.md  ENHANCED_PIPELINE_SCRIPTS.md  ENHANCED_TEMPLATE_ASSESSMENT.md  FINAL_DOCUMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_ROADMAP.md  INDEX.md  NAVIGATION_ENHANCEMENT_SUMMARY.md  PIPELINE_SCRIPTS.md  QUICK_REFERENCE.md  README.md  SETUP.md  SPEC.md  START_HERE.md  STUBS_TO_IMPROVE.md  SUPPORT.md  TEMPLATE_ASSESSMENT.md  about_gnn.md  actinf_ptsd_clean_commented_cooper_revised_actinf_recipe_30nov2024_v2_he4_2_0_(ap_review_20dec2024)_cardstageprob_test (3).py  advanced_modeling_patterns.md  expected_dirs.txt  framework_integration_guide.md  gnn_dsl_manual.md  gnn_llm_neurosymbolic_active_inference.md  gnn_overview.md  gnn_syntax.md  learning_paths.md  quickstart.md  quickstart_tutorial.md  single_sentence_overview.md  style_guide.md
doc/d2/: SPEC.md  (+4 more)
editor/: gnn.tmLanguage.json
input/: AGENTS.md  README.md  SPEC.md  config.yaml  model_family_manifest.json  ontology_terms.json
manuscript/: 00_abstract.md  01_introduction.md  02_system_context.md  03_methods.md  04_artifacts_and_evidence.md  05_reproducibility.md  06_limitations_and_next_steps.md  98_symbols_glossary.md  99_references.md  AGENTS.md  README.md  S01_source_surface.md  SYNTAX.md  config.yaml  preamble.md  references.bib
output/: 12_execute_output  15_audio_output  1_setup_output  7_export_output  8_visualization_output  PIPELINE_REPORT.md  bandit-ci.json  coverage.xml  dependency_installation_report.json  directory_structure.json  documentation_audit_report.md  export_results.json  filepath_audit_report.json  filepath_audit_summary.md  gnn_pipeline_summary_site.html  gnn_processing_summary.md  installed_packages.json  pipeline_execution_summary.json  pipeline_fixes_oct_2_2025.md  pipeline_validation_report.json  pytest_report.xml  security_bandit.json  security_bandit_after.json  test_summary.json  type_check_report.md  type_check_results.json  type_check_summary.json  validation_results.json  visualization_results.json  visualization_summary.json
pytest-junit-3.11/: pytest-3.11.xml
pytest-junit-3.13/: pytest-3.13.xml
releases/: AGENTS.md  README.md
scratch/: audit_docs2.py  audit_docs_content.py  audit_headers.py  bump_metadata.py  bump_readmes.py  check_readmes.py  fix_links.py  triple_check.py  triple_check_deep.py
scripts/: AGENTS.md  CLAUDE.md  README.md  SPEC.md  audit_docs.py  audit_links.py  audit_orchestrators.py  auto_document_agents.py  check_capability_contracts.py  check_gnn_doc_patterns.py  check_maintained_doc_terms.py  check_manuscript_tokens.py  check_pomdp_gridworld_outputs.py  check_repo_terminology.py  count_tests.sh  emit_run_manifest.py  generate_api_index.py  generate_pipeline_container_plan.py  generate_viz_inventory.py  install_dependencies.py  install_julia_packages.jl  install_optional_packages.py  manuscript_build_figures.py  manuscript_fig_backend_matrix.py  manuscript_fig_family_framework.py  manuscript_fig_orchestration.py  manuscript_fig_pipeline_dag.py  manuscript_fig_repo_metrics.py  manuscript_fig_triple_play.py  pipeline_audit_docs.py  pipeline_audit_filepaths.py  pipeline_fix_filepath_references.py  pipeline_fix_path_issues.py  pipeline_generate_api_index.py  pipeline_generate_viz_inventory.py  pipeline_install_optional_packages.py  pipeline_update_version.py  pipeline_validate_documentation.py  pymdp_scaling_config.yaml  pymdp_spec_generator.py  (+11 more)
src/: 0_template.py  10_execute.py  10_ontology.py  11_llm.py  11_render.py  12_audio.py  12_discopy.py  12_execute.py  12_site.py  12_website.py  13_discopy_jax_eval.py  13_llm.py  13_sapf.py  13_website.py  14_ml_integration.py  14_report.py  14_site.py  15_audio.py  15_site.py  16_analysis.py  17_integration.py  18_security.py  19_research.py  1_gnn.py  1_setup.py  20_website.py  21_mcp.py  21_report.py  22_gui.py  22_mcp.py  23_report.py  24_intelligent_analysis.py  24_oxdraw.py  2_gnn.py  2_setup.py  2_tests.py  3_gnn.py  3_tests.py  3_tests.py.bak  4_gnn_type_checker.py  (+29 more)
(+8112 files in other folders)
