[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generalized-notation-notation"
version = "1.3.0"
description = "A text-based language for standardizing Active Inference generative models"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "CC-BY-NC-SA-4.0"}
authors = [
    {name = "Active Inference Institute", email = "contact@activeinference.org"}
]
keywords = ["active-inference", "gnn", "cognitive-modeling", "scientific-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies (essential for basic functionality)
dependencies = [
    # Core scientific computing (lightweight)
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "networkx>=2.6.0",
    "pyyaml>=6.0",
    # scipy and scikit-learn moved to ml-ai optional group (all uses are deferred imports)
    # System monitoring and utilities
    "psutil>=5.8.0",
    # HTTP and async communication (httpx covers sync + async; requests/aiohttp are optional)
    "httpx>=0.27.0",
    # Safe XML parsing (replaces stdlib xml.etree/minidom for untrusted input)
    "defusedxml>=0.7.1",
    # Active Inference ecosystem
    "inferactively-pymdp>=0.0.7",  # Active Inference agent framework
]

# Development dependencies (enhanced for comprehensive development workflow)
[project.optional-dependencies]
dev = [
    # Testing tools (requests used only in test_pipeline_performance.py)
    "requests>=2.28.0",
    "pytest>=6.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=3.0.0",
    "pytest-json-report>=1.5.0",
    "pytest-mock>=3.10.0",
    "pytest-benchmark>=4.0.0",
    "pytest-sugar>=0.9.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",

    # Security scanning (dev-only tools)
    "bandit>=1.7.0",
    "safety>=2.3.0",

    # Code quality and linting
    "isort>=5.12.0",
    "black>=26.3.1",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=3.0.0",
    "mypy-extensions>=1.0.0",
    "ruff>=0.1.0",
    "pylint>=3.0.0",

    # Documentation generation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",

    # Interactive development
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
    "jupyterlab>=4.0.0",
    "jupyter-server>=2.0.0",
    "ipywidgets>=8.0.0",

    # Performance profiling and debugging
    "py-spy>=0.3.0",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.0.0",

    # Development utilities
    "rich>=13.0.0",
    "typer>=0.9.0",
]

api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

# Optional heavy packages (install separately based on use case requirements)
# JAX-based active inference: GPU-accelerated free energy minimization (step 12 jax renderer)
active-inference = [
    "jax[cpu]>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.7.0",
    "optax>=0.1.0",
]

# NumPyro probabilistic programming: Bayesian inference backends (step 12 numpyro renderer)
probabilistic-programming = [
    "numpyro>=0.14",
    "jax[cpu]>=0.4.0",
    "jaxlib>=0.4.0",
]

# Deep learning: PyTorch-based renderers and LLM fine-tuning (step 12 pytorch renderer)
# Also includes scipy/scikit-learn: all uses in the codebase are deferred imports
ml-ai = [
    "torch>=2.0.0",
    "transformers>=4.25.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

# LLM integration: external API calls for step 13 (LLM analysis)
llm = [
    "openai>=1.0.0",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",  # load_dotenv used by llm_processor.py for API key loading
    "aiohttp>=3.9.0",  # used by openrouter and perplexity providers (guarded try/except)
]

# Enhanced visualization: interactive plots beyond matplotlib (steps 8, 9, 16)
visualization = [
    "pandas>=1.3.0",
    "plotly>=5.15.0",
    "seaborn>=0.12.0",
    "h5py>=3.8.0",
]

# Audio synthesis: SAPF/sonification output (step 15)
audio = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pedalboard>=0.7.0",
]

# GUI interfaces: Gradio/Streamlit frontends (step 22)
gui = [
    "gradio>=6.7.0",
    "streamlit>=1.25.0",
]

# Graph/categorical: DisCoPy string diagrams + graph analysis (step 11 discopy renderer)
graphs = [
    "graphviz>=0.20.0",
    "discopy>=1.1.0",
]

# Aspirational/user-facing groups: no core pipeline callers; installed by users
# who extend GNN for their own workflows (notebooks, distributed compute, persistence).
research = [
    # NOTE: jupyterlab/jupyter-server duplicate dev group entries intentionally —
    # research group targets non-developer end-users who don't install dev extras.
    "jupyterlab>=4.0.0",
    "jupyter-server>=2.0.0",
    "sympy>=1.12.0",
    "numba>=0.57.0",
    "cython>=3.0.0",
    # pymdp-toolbox not available, omitted
]

# Distributed/cloud execution: used by execute/distributed.py (RayDispatcher/Dask) and
# users who run large parameter sweeps on clusters.
scaling = [
    "dask>=2023.0.0",
    "distributed>=2023.0.0",
    "ray>=2.0.0",  # distributed execution in execute/distributed.py
]

# All optional dependencies (install everything).
# MAINTAINER NOTE: This list manually duplicates packages from the named
# groups above (active-inference, llm, visualization, audio, gui, etc.).
# When adding a package to any named group, ALSO add it here.
# Ideally this would use `{include-group = "name"}` syntax once supported.
all = [
    # Active Inference ecosystem (pymdp already in main deps as 0.0.1)
    "jax[cpu]>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.7.0",
    "optax>=0.1.0",

    # Machine Learning & AI
    "torch>=2.0.0",
    "transformers>=4.25.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",

    # API server
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",

    # LLM integration
    "openai>=1.0.0",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",

    # Visualization and graphics
    "plotly>=5.15.0",
    "seaborn>=0.12.0",
    "h5py>=3.8.0",
    "graphviz>=0.20.0",
    "discopy>=1.1.0",

    # Audio processing
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pedalboard>=0.7.0",

    # GUI and interactive interfaces
    "gradio>=6.7.0",
    "streamlit>=1.25.0",

    # Research and scientific computing
    "jupyterlab>=4.0.0",
    "jupyter-server>=2.0.0",
    "sympy>=1.12.0",
    "numba>=0.57.0",
    "cython>=3.0.0",
    # pymdp-toolbox not available

    # Scaling and performance
    "dask>=2023.0.0",
    "distributed>=2023.0.0",
    "ray>=2.0.0",

    # Probabilistic programming
    "numpyro>=0.14",
]

[project.urls]
Homepage = "https://github.com/ActiveInferenceInstitute/GeneralizedNotationNotation"
Documentation = "https://github.com/ActiveInferenceInstitute/GeneralizedNotationNotation/tree/main/doc"
Repository = "https://github.com/ActiveInferenceInstitute/GeneralizedNotationNotation.git"
Issues = "https://github.com/ActiveInferenceInstitute/GeneralizedNotationNotation/issues"

[project.scripts]
gnn = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "jaxlib.*", 
    "flax.*",
    "optax.*",
    "discopy.*",
    "pymdp.*",
    "torch.*",
    "numpyro.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config --durations=20"
testpaths = ["src/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "uv: UV package manager environment management tests",
    "safe_to_fail: Tests that can fail without blocking CI",
    "pipeline: marks tests as full pipeline integration tests (deselect with '-m \"not pipeline\"')",
    "mcp: marks MCP audit tests that require module discovery (deselect with '-m \"not mcp\"')",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "src/tests"]
skips = ["B101", "B601"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] 
