[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generalized-notation-notation"
version = "1.3.0"
description = "A text-based language for standardizing Active Inference generative models"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "CC-BY-NC-SA-4.0"}
authors = [
    {name = "Active Inference Institute", email = "contact@activeinference.org"}
]
keywords = ["active-inference", "gnn", "cognitive-modeling", "scientific-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies (essential for basic functionality)
dependencies = [
    # Core scientific computing (lightweight)
    "numpy>=2.4.4",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pyyaml>=6.0.3",
    # scipy and scikit-learn moved to ml-ai optional group (all uses are deferred imports)
    # System monitoring and utilities
    "psutil>=7.2.2",
    # HTTP and async communication
    "httpx>=0.28.1",
    "aiohttp>=3.13.5",  # OpenRouter / Perplexity LLM providers
    # LLM stack (Step 13+); local Ollama + cloud APIs — defaults in ``llm/defaults.py`` / config
    "openai>=2.31.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
    # Safe XML parsing (replaces stdlib xml.etree/minidom for untrusted input)
    "defusedxml>=0.7.1",
    # Active Inference ecosystem — pymdp 1.0.0 is the JAX-first rewrite
    # (see doc/pymdp/pymdp_1_0_0_alignment_matrix.md). Step 12 uses the new
    # Agent API: list[jax.Array] models, infer_states(empirical_prior=...),
    # infer_policies(qs), sample_action(q_pi, rng_key=...).
    "inferactively-pymdp>=1.0.0",
    "equinox>=0.13.6",  # pymdp 1.0.0 Agent is an equinox Module
    "multimethod>=2.0.2",  # pymdp 1.0.0 dispatch
    # Step 12 execution backends (JAX, NumPyro, PyTorch, DisCoPy) — same pins as optional ``execution-frameworks``
    "jax[cpu]>=0.9.2",
    "jaxlib>=0.9.2",
    "flax>=0.12.6",
    "optax>=0.2.8",
    "numpyro>=0.20.1",
    "torch>=2.11.0",
    "discopy>=1.2.2",
    # Interactive visualization (Step 9 advanced viz Plotly dashboards; steps 8/16)
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
    "h5py>=3.16.0",
    # Step 12 bnlearn backend (Bayesian network scripts)
    "bnlearn>=0.13.0",
]

# Development dependencies (enhanced for comprehensive development workflow)
[project.optional-dependencies]
dev = [
    # aiohttp is a core dependency; listed here only so ``uv sync --extra dev`` stays explicit in lockfiles
    "aiohttp>=3.13.5",
    # Testing tools (requests used only in test_pipeline_performance.py)
    "requests>=2.33.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-json-report>=1.5.0",
    "pytest-mock>=3.15.1",
    "pytest-benchmark>=5.2.3",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",

    # Security scanning (dev-only tools; pip-audit via uv tool / CI — avoids legacy safety→nltk chain)
    "bandit>=1.9.4",
    "bandit-sarif-formatter>=1.1.1",

    # Code quality and linting
    "isort>=8.0.1",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "mypy-extensions>=1.1.0",
    "ruff>=0.15.10",
    "pylint>=4.0.5",

    # Documentation generation
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
    "myst-parser>=5.0.0",

    # Interactive development
    "ipython>=9.10.1",
    "ipdb>=0.13.13",
    "jupyterlab>=4.5.6",
    "jupyter-server>=2.17.0",
    "ipywidgets>=8.1.8",

    # Performance profiling and debugging
    "py-spy>=0.4.1",
    "memory-profiler>=0.61.0",
    "line-profiler>=5.0.2",

    # Development utilities
    "rich>=15.0.0",
    "typer>=0.24.1",
]

api = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
]

# Optional heavy packages (install separately based on use case requirements)
# JAX-based active inference: GPU-accelerated free energy minimization (step 12 jax renderer)
active-inference = [
    "jax[cpu]>=0.9.2",
    "jaxlib>=0.9.2",
    "flax>=0.12.6",
    "optax>=0.2.8",
]

# NumPyro probabilistic programming: Bayesian inference backends (step 12 numpyro renderer)
probabilistic-programming = [
    "numpyro>=0.20.1",
    "jax[cpu]>=0.9.2",
    "jaxlib>=0.9.2",
]

# Deep learning: PyTorch-based renderers and LLM fine-tuning (step 12 pytorch renderer)
# Also includes scipy/scikit-learn: all uses in the codebase are deferred imports
ml-ai = [
    "torch>=2.11.0",
    "transformers>=5.5.3",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",
]

# LLM integration — same packages as core dependencies; kept for ``uv sync --extra llm`` compatibility
llm = [
    "openai>=2.31.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
    "aiohttp>=3.13.5",
]

# Enhanced visualization: interactive plots beyond matplotlib (steps 8, 9, 16).
# Same pins as core ``dependencies``; kept for ``uv sync --extra visualization``.
visualization = [
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
    "h5py>=3.16.0",
]

# bnlearn (Step 12); also in core — optional alias for explicit sync.
inference = [
    "bnlearn>=0.13.0",
]

# Audio synthesis: SAPF/sonification output (step 15)
audio = [
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "pedalboard>=0.9.22",
]

# GUI interfaces: Gradio/Streamlit frontends (step 22)
gui = [
    "gradio>=6.12.0",
    "streamlit>=1.56.0",
]

# Graph/categorical: DisCoPy string diagrams + graph analysis (step 11 discopy renderer)
graphs = [
    "graphviz>=0.21",
    "discopy>=1.2.2",
]

# Step 12 Python backends — also listed in core ``dependencies``; this extra kept for
# ``uv sync --extra execution-frameworks`` / docs compatibility.
execution-frameworks = [
    "jax[cpu]>=0.9.2",
    "jaxlib>=0.9.2",
    "flax>=0.12.6",
    "optax>=0.2.8",
    "numpyro>=0.20.1",
    "torch>=2.11.0",
    "discopy>=1.2.2",
]

# Aspirational/user-facing groups: no core pipeline callers; installed by users
# who extend GNN for their own workflows (notebooks, distributed compute, persistence).
research = [
    # NOTE: jupyterlab/jupyter-server duplicate dev group entries intentionally —
    # research group targets non-developer end-users who don't install dev extras.
    "jupyterlab>=4.5.6",
    "jupyter-server>=2.17.0",
    "sympy>=1.14.0",
    "numba>=0.65.0",
    "cython>=3.2.4",
    # pymdp-toolbox not available, omitted
]

# Distributed/cloud execution: used by execute/distributed.py (RayDispatcher/Dask) and
# users who run large parameter sweeps on clusters.
scaling = [
    "dask>=2026.3.0",
    "distributed>=2026.3.0",
    "ray>=2.54.1",  # distributed execution in execute/distributed.py
]

# All optional dependencies (install everything).
# MAINTAINER NOTE: This list manually duplicates packages from the named
# groups above (active-inference, llm, visualization, audio, gui, etc.).
# When adding a package to any named group, ALSO add it here.
# Ideally this would use `{include-group = "name"}` syntax once supported.
all = [
    # Active Inference ecosystem (pymdp already in main deps as 0.0.1)
    "jax[cpu]>=0.9.2",
    "jaxlib>=0.9.2",
    "flax>=0.12.6",
    "optax>=0.2.8",

    # Machine Learning & AI
    "torch>=2.11.0",
    "transformers>=5.5.3",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",

    # API server
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",

    # LLM integration
    "openai>=2.31.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
    "aiohttp>=3.13.5",

    # Visualization and graphics
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
    "h5py>=3.16.0",
    "bnlearn>=0.13.0",
    "graphviz>=0.21",
    "discopy>=1.2.2",

    # Audio processing
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "pedalboard>=0.9.22",

    # GUI and interactive interfaces
    "gradio>=6.12.0",
    "streamlit>=1.56.0",

    # Research and scientific computing
    "jupyterlab>=4.5.6",
    "jupyter-server>=2.17.0",
    "sympy>=1.14.0",
    "numba>=0.65.0",
    "cython>=3.2.4",
    # pymdp-toolbox not available

    # Scaling and performance
    "dask>=2026.3.0",
    "distributed>=2026.3.0",
    "ray>=2.54.1",

    # Probabilistic programming
    "numpyro>=0.20.1",
]

[project.urls]
Homepage = "https://github.com/ActiveInferenceInstitute/GeneralizedNotationNotation"
Documentation = "https://github.com/ActiveInferenceInstitute/GeneralizedNotationNotation/tree/main/doc"
Repository = "https://github.com/ActiveInferenceInstitute/GeneralizedNotationNotation.git"
Issues = "https://github.com/ActiveInferenceInstitute/GeneralizedNotationNotation/issues"

[project.scripts]
gnn = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "jaxlib.*", 
    "flax.*",
    "optax.*",
    "discopy.*",
    "pymdp.*",
    "torch.*",
    "numpyro.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config --durations=20"
testpaths = ["src/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "uv: UV package manager environment management tests",
    "safe_to_fail: Tests that can fail without blocking CI",
    "pipeline: marks tests as full pipeline integration tests (deselect with '-m \"not pipeline\"')",
    "mcp: marks MCP audit tests that require module discovery (deselect with '-m \"not mcp\"')",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "src/tests"]
skips = ["B101", "B601"]

[tool.ruff]
target-version = "py311"
line-length = 88

# Lint rules: omit ``W`` (mass whitespace noise) and ``UP`` (pyupgrade churn on a large
# tree). CI runs ``ruff check src/``; keep the set aligned with what the repo can sustain.
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "E402",  # module import not at top (sys.path bootstrap in orchestrators)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B905",  # zip without strict= — large legacy surface
    # Style / legacy patterns (ruff 0.14+); tighten incrementally
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    "E721",  # type comparison
    "E731",  # lambda assignment
    "E741",  # ambiguous variable name
    "F821",  # undefined name (lazy imports, string annotations, template examples)
    "F823",  # undefined local
    "B007",  # unused loop control variable
    "B904",  # raise without from inside except
    "C401",  # unnecessary generator set
    "C403",  # unnecessary list comprehension (set)
    "C405",  # unnecessary literal set
    "C408",  # unnecessary dict call
    "C414",  # unnecessary double cast / process
    "C416",  # unnecessary comprehension
    "F811",  # redefined while unused
    "F401",  # unused import (optional deps, import-or-skip probes, test shims)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/tests/**" = ["F401"]

# CVE-2026-4539 / Dependabot #63: ReDoS in ``pygments.lexers.archetype`` (AdlLexer).
# PyPI is still at 2.19.2; override with the fix from pygments/pygments#3064 until a release >2.19.2.
# Revisit: drop this block and use ``pygments>=2.19.3`` when available on PyPI.
[tool.uv]
override-dependencies = [
    "pygments @ git+https://github.com/zsbahtiar/pygments.git@2be805d86471efb8efd51886d4d11a33fa22a928",
]
