[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generalized-notation-notation"
version = "3.0.0"
description = "A text-based language for standardizing Active Inference generative models"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "CC-BY-NC-SA-4.0"}
authors = [
    {name = "Active Inference Institute", email = "contact@activeinference.org"}
]
keywords = ["active-inference", "gnn", "cognitive-modeling", "scientific-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies (essential for basic functionality)
dependencies = [
    # Core scientific computing (lightweight)
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "networkx>=2.6.0",
    "pyyaml>=6.0",
    # scipy and scikit-learn moved to ml-ai optional group (all uses are deferred imports)
    # System monitoring and utilities
    "psutil>=5.8.0",
    # HTTP and async communication
    "httpx>=0.27.0",
    "aiohttp>=3.14.0",  # OpenRouter / Perplexity LLM providers; patched for 2026 aiohttp advisories
    # Pygments: official fix for CVE-2026-4539 (AdlLexer ReDoS) — replaced git fork override
    "pygments>=2.20.0",
    # LLM stack (Step 13+); local Ollama + cloud APIs — defaults in ``llm/defaults.py`` / config
    "openai>=1.0.0",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    # Safe XML parsing (replaces stdlib xml.etree/minidom for untrusted input)
    "defusedxml>=0.7.1",
    # Active Inference ecosystem — pymdp 1.0.0 is the JAX-first rewrite
    # (see doc/pymdp/pymdp_1_0_0_alignment_matrix.md). Step 12 uses the new
    # Agent API: list[jax.Array] models, infer_states(empirical_prior=...),
    # infer_policies(qs), sample_action(q_pi, rng_key=...).
    "inferactively-pymdp>=1.0.0",
    "equinox>=0.11.0",  # pymdp 1.0.0 Agent is an equinox Module
    "multimethod>=1.11",  # pymdp 1.0.0 dispatch
    # Step 12 execution backends (JAX, NumPyro, DisCoPy)
    # PyTorch remains supported by the renderer/executor but is intentionally
    # not locked as a default dependency while GHSA-rrmf-rvhw-rf47 has no
    # patched torch release. The bnlearn package is also omitted from the
    # default lock because its pgmpy dependency pulls torch transitively.
    "jax[cpu]>=0.7.0,<0.10",  # upper bound keeps numpyro 0.20.x import-compatible
    "jaxlib>=0.7.0,<0.10",
    "flax>=0.7.0",
    "optax>=0.1.0",
    "numpyro>=0.14",
    "discopy>=1.1.0",
    # Interactive visualization (Step 9 advanced viz Plotly dashboards; steps 8/16)
    "pandas>=1.3.0",
    "plotly>=5.15.0",
    "seaborn>=0.12.0",
    "h5py>=3.8.0",
]

# Development dependencies (enhanced for comprehensive development workflow)
[project.optional-dependencies]
dev = [
    # aiohttp is a core dependency; listed here only so ``uv sync --extra dev`` stays explicit in lockfiles
    "aiohttp>=3.14.0",
    # Maintained lightweight integration surfaces covered by the default test suite
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=16.0",
    "pygls>=1.3.1",
    "pytest>=6.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=3.0.0",
    "pytest-json-report>=1.5.0",
    "pytest-benchmark>=4.0.0",
    "pytest-sugar>=0.9.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",

    # Security scanning (dev-only tools; pip-audit via uv tool / CI avoids the retired safety->nltk chain)
    "bandit>=1.7.0",
    "bandit-sarif-formatter>=1.1.1",

    # Code quality and linting
    "isort>=5.12.0",
    "black>=26.3.1",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=3.0.0",
    "mypy-extensions>=1.0.0",
    "ruff>=0.1.0",
    "pylint>=3.0.0",

    # Documentation generation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",

    # Interactive development
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
    "jupyterlab>=4.5.7",
    "jupyter-server>=2.18.0",
    "ipywidgets>=8.0.0",

    # Performance profiling and debugging
    "py-spy>=0.3.0",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.0.0",

    # Development utilities
    "rich>=13.0.0",
    "typer>=0.9.0",
]

api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

# Deep learning: transformer/scientific packages beyond core Step 12 backends.
# PyTorch is installed manually by users who need that backend until a patched
# torch release is available for GHSA-rrmf-rvhw-rf47.
ml-ai = [
    "transformers>=4.25.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

# Audio synthesis: SAPF/sonification output (step 15)
audio = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pedalboard>=0.7.0",
]

# GUI interfaces: Gradio/Streamlit frontends (step 22)
gui = [
    "gradio>=6.7.0",
    "streamlit>=1.25.0",
]

# Graph/categorical: system Graphviz bindings beyond core DisCoPy rendering
graphs = [
    "graphviz>=0.20.0",
]

# Aspirational/user-facing groups: no core pipeline callers; installed by users
# who extend GNN for their own workflows (notebooks, distributed compute, persistence).
research = [
    # NOTE: jupyterlab/jupyter-server duplicate dev group entries intentionally —
    # research group targets non-developer end-users who don't install dev extras.
    "jupyterlab>=4.5.7",
    "jupyter-server>=2.18.0",
    "sympy>=1.12.0",
    "numba>=0.57.0",
    "cython>=3.0.0",
    # pymdp-toolbox not available, omitted
]

# Distributed/cloud execution: used by execute/distributed.py (RayDispatcher/Dask) and
# users who run large parameter sweeps on clusters.
scaling = [
    "dask>=2023.0.0",
    "distributed>=2023.0.0",
    "ray>=2.0.0",  # distributed execution in execute/distributed.py
]

# All optional dependencies (install everything).
# MAINTAINER NOTE: This list manually duplicates packages from the named
# optional groups above (api, ml-ai, audio, gui, graphs, research, scaling).
# When adding a package to any named group, ALSO add it here.
# Ideally this would use `{include-group = "name"}` syntax once supported.
all = [
    # Machine Learning & AI
    "transformers>=4.25.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",

    # API server
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",

    # Visualization and graphics
    "graphviz>=0.20.0",

    # Audio processing
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pedalboard>=0.7.0",

    # GUI and interactive interfaces
    "gradio>=6.7.0",
    "streamlit>=1.25.0",

    # Research and scientific computing
    "jupyterlab>=4.5.7",
    "jupyter-server>=2.18.0",
    "sympy>=1.12.0",
    "numba>=0.57.0",
    "cython>=3.0.0",
    # pymdp-toolbox not available

    # Scaling and performance
    "dask>=2023.0.0",
    "distributed>=2023.0.0",
    "ray>=2.0.0",

]

[project.urls]
Homepage = "https://github.com/ActiveInferenceInstitute/GeneralizedNotationNotation"
Documentation = "https://github.com/ActiveInferenceInstitute/GeneralizedNotationNotation/tree/main/doc"
Repository = "https://github.com/ActiveInferenceInstitute/GeneralizedNotationNotation.git"
Issues = "https://github.com/ActiveInferenceInstitute/GeneralizedNotationNotation/issues"

[project.scripts]
gnn = "src.cli:main"

[tool.uv]
# Security floors for transitive packages resolved through optional extras.
# Keep these as resolver constraints so the packages do not become core runtime
# dependencies merely because Dependabot tracks them in uv.lock.
constraint-dependencies = [
    "gitpython>=3.1.50",
    "idna>=3.15",
    "mistune>=3.2.1",
    "python-multipart>=0.0.27",
    "starlette>=1.0.1",
    "tornado>=6.5.6",
    "urllib3>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
exclude = "(^src/output/|^src/__init__\\.py$)"
warn_return_any = true
warn_unused_configs = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = false
strict_equality = false

[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
    "dask.*",
    "defusedxml.*",
    "fastapi.*",
    "jax.*",
    "jaxlib.*", 
    "jsonschema.*",
    "flax.*",
    "optax.*",
    "gradio.*",
    "h5py.*",
    "librosa.*",
    "lsprotocol.*",
    "matplotlib.*",
    "mpl_toolkits.*",
    "networkx.*",
    "openai.*",
    "ollama.*",
    "pandas.*",
    "pedalboard.*",
    "plotly.*",
    "psutil.*",
    "pygls.*",
    "pygments.*",
    "pytest_timeout.*",
    "pytest_cov.*",
    "discopy.*",
    "pymdp.*",
    "ray.*",
    "requests.*",
    "scipy.*",
    "seaborn.*",
    "sklearn.*",
    "soundfile.*",
    "streamlit.*",
    "tensorflow.*",
    "torch.*",
    "numpyro.*",
    "uvicorn.*",
    "watchdog.*",
    "xdist.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config --durations=20"
testpaths = ["src/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "uv: UV package manager environment management tests",
    "xfail: Tests expected to fail in certain environments (e.g. missing ollama)",
    "pipeline: marks tests as full pipeline integration tests (deselect with '-m \"not pipeline\"')",
    "mcp: marks MCP audit tests that require module discovery (deselect with '-m \"not mcp\"')",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "src/tests"]
skips = ["B101", "B601"]

[tool.ruff]
target-version = "py311"
line-length = 88

# Lint rules: omit ``W`` (mass whitespace noise) and ``UP`` (pyupgrade churn on a large
# tree). CI runs ``ruff check src/``; keep the set aligned with what the repo can sustain.
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "E402",  # module import not at top (sys.path bootstrap in orchestrators)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B905",  # zip without strict= across a large existing surface
    # Style patterns (ruff 0.14+); tighten incrementally
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    "E721",  # type comparison
    "E731",  # lambda assignment
    "E741",  # ambiguous variable name
    "F821",  # undefined name (lazy imports, string annotations, template examples)
    "F823",  # undefined local
    "B007",  # unused loop control variable
    "B904",  # raise without from inside except
    "C401",  # unnecessary generator set
    "C403",  # unnecessary list comprehension (set)
    "C405",  # unnecessary literal set
    "C408",  # unnecessary dict call
    "C414",  # unnecessary double cast / process
    "C416",  # unnecessary comprehension
    "F811",  # redefined while unused
    "F401",  # unused import (optional deps, import-or-skip probes, test adapters)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/tests/**" = ["F401"]

# CVE-2026-4539 resolved: Pygments 2.20.0 (released 2026-03-29) includes the
# official fix for the AdlLexer ReDoS (pygments/pygments#3064).  The git-fork
# override that previously pinned to zsbahtiar/pygments.git has been removed.
# The floor constraint ``pygments>=2.20.0`` in [project.dependencies] enforces
# the patched version from PyPI.
